<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/informacion_empleado_1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombres_e1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres" />

            <EditText
                android:id="@+id/apellidos_e1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/apellidos" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/cargo" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/cargo_e1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/cargos" />
            </LinearLayout>

            <EditText
                android:id="@+id/horas_e1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/horas_trabajadas_en_el_mes"
                android:inputType="numberSigned" />
        </LinearLayout>

        <!-- ******************* Empleado 2 ************************-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/informacion_empleado_2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombres_e2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres" />

            <EditText
                android:id="@+id/apellidos_e2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/apellidos" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/cargo" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/cargo_e2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/cargos" />
            </LinearLayout>

            <EditText
                android:id="@+id/horas_e2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/horas_trabajadas_en_el_mes"
                android:inputType="numberSigned" />
        </LinearLayout>

        <!-- ******************* Empleado 3 ************************-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/informacion_empleado_3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombres_e3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres" />

            <EditText
                android:id="@+id/apellidos_e3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/apellidos" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/cargo" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/cargo_e3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/cargos" />
            </LinearLayout>

            <EditText
                android:id="@+id/horas_e3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/horas_trabajadas_en_el_mes"
                android:inputType="numberSigned" />
        </LinearLayout>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/calcular" />
    </LinearLayout>

</ScrollView>